# Alexy-AI

./: PKGBUILD  README.md  pyproject.toml
onix-voice-activation-training-scripts/: 01_setup.sh  02_download_data.sh  03_train.sh  04_test_tts.sh  05_convert_tflite.sh  README.md
src/usr/share/linexin/wakewordmodels/: hey_alexy.onnx
src/usr/share/linexin/widgets/: aa-alexy-ai-widget.py  r-ai-sysadmin-widget.py
src/usr/share/linexin/widgets/localization/de_DE/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/en_US/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/es_ES/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/fr_FR/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/hi_IN/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/pl_PL/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/pt_BR/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/pt_PT/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/ru_RU/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/localization/zh_CN/: aa_alexy_ai_dictionary.py  alexy_ai_dictionary.py
src/usr/share/linexin/widgets/themes/alexy/default/: theme.json
src/usr/share/linexin/widgets/themes/imessage/: style.css
(+1 files in other folders)
